--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build: ./base/mysql
     volumes:
       - db-store:/var/lib/mysql
+    ports:
+      - 33060:3306
 
 volumes:
   db-store:
