--- a/base/php/Dockerfile
+++ b/base/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.1-fpm-buster
+FROM php:8.0-fpm-buster
 SHELL ["/bin/bash", "-oeux", "pipefail", "-c"]
 
 ENV COMPOSER_ALLOW_SUPERUSER=1 \
@@ -11,6 +11,10 @@ RUN apt-get update && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* && \
   docker-php-ext-install intl pdo_mysql zip bcmath
+
+# Node.js
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
+RUN apt-get install -y nodejs
 
 COPY ./php.ini /usr/local/etc/php/php.ini
 
