--- a/dev_cloudformation/vpc.yml
+++ b/dev_cloudformation/vpc.yml
@@ -18,3 +18,20 @@ Resources:
       Tags:
         - Key: Name
           Value: Subnet1FromTakadaCFTest
+  LogicalID:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: Takada-SG
+      GroupDescription: "this is security Group"
+      # 最上部で定義したVPCの論理IDを指定
+      VpcId: !Ref TakadaMakeVPC
+      # インバウンドルールを設定
+      # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+      Tags:
+        - Key: Name
+          Value: SGFromTakadaCFTest
