--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,9 +3,6 @@
 # docker-compose -f docker-compose.test.yml up
 # ローカルではLaravelまで通信が到達する事を確認できた。
 
-# が、以下のままだとQueryExceptionが発生する。
-# 発生するエラーは以下。現在コメントアウトしているDB関連の記述を追加するとエラーが消える。
-# SQLSTATE[HY000] [2002] php_network_getaddresses: getaddrinfo for db failed: Name or service not known (SQL: select * from `users` where `id` = 101 limit 1) (View: /data/resources/views/top.blade.php)
 
 version: "3.9"
 # EC2インスタンスで起動を試したい場合は、踏み台サーバーにしてるEC2の都合上3.3を指定する。
@@ -29,20 +26,6 @@ services:
         target: /root/.config/psysh
         volume:
           nocopy: true
-    # 以下、environmentの記述は全部コメントアウトしたままでも動作に影響なさそう。
-    # environment:
-    #   - APP_DEBUG=${APP_DEBUG:-true}
-    #   - APP_KEY=${APP_KEY:-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX}
-    #   - APP_ENV=${APP_ENV:-local}
-    #   - APP_URL=${APP_URL:-http://localhost}
-    #   - LOG_CHANNEL=${LOG_CHANNEL:-stderr}
-    #   - LOG_STDERR_FORMATTER=${LOG_STDERR_FORMATTER:-Monolog\Formatter\JsonFormatter}
-    #   - DB_CONNECTION=${DB_CONNECTION:-mysql}
-    #   - DB_HOST=${DB_HOST:-db}
-    #   - DB_PORT=${DB_PORT:-3306}
-    #   - DB_DATABASE=${DB_DATABASE:-laravel_local}
-    #   - DB_USERNAME=${DB_USERNAME:-phper}
-    #   - DB_PASSWORD=${DB_PASSWORD:-secret}
 
   # Nginxコンテナ
   web:
@@ -57,23 +40,23 @@ services:
         source: ./src
         target: /data
 
-  # db:
-  #   build:
-  #     context: .
-  #     dockerfile: ./infra/docker/mysql/Dockerfile
-  #   ports:
-  #     - target: 3306
-  #       published: 3306
-  #       protocol: tcp
-  #       mode: host
-  #   volumes:
-  #     - type: volume
-  #       source: db-store
-  #       target: /var/lib/mysql
-  #       volume:
-  #         nocopy: true
-  #   environment:
-  #     - MYSQL_DATABASE=${DB_DATABASE:-laravel_local}
-  #     - MYSQL_USER=${DB_USERNAME:-phper}
-  #     - MYSQL_PASSWORD=${DB_PASSWORD:-secret}
-  #     - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-secret}
+  db:
+    build:
+      context: .
+      dockerfile: ./infra/docker/mysql/Dockerfile
+    ports:
+      - target: 3306
+        published: 3306
+        protocol: tcp
+        mode: host
+    volumes:
+      - type: volume
+        source: db-store
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
+    environment:
+      - MYSQL_DATABASE=${DB_DATABASE:-laravel_local}
+      - MYSQL_USER=${DB_USERNAME:-phper}
+      - MYSQL_PASSWORD=${DB_PASSWORD:-secret}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-secret}
